--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                 <input type="text" name="name" id="name" placeholder="Your Name" required />
                 <input type="email" name="email" id="email" placeholder="Your Email" required />
                 <textarea name="message" rows="5" id="message" placeholder="Your Message" required></textarea>
-               <input type="hidden" name="_next" value="rejoice-ambrose.github.io/thankyou/">
-                <button type="submit" onclick="/rejoice-ambrose.github.io/thankyou">Send Message</button>
+              
+                <button type="submit">Send Message</button>
     </section>
     <!-- social media links -->
     <section class="social-media " id="social-media">
